Corrección de warnings